--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
@@ -54,6 +54,21 @@ $secondary: #010101;
   .card-rad{
     border-radius: 0px;
   }
+  // table {
+  //   font-family: arial, sans-serif;
+  //   border-collapse: collapse;
+  //   width: 100%;
+  // }
+  
+  // td, th {
+  //   border: 1px solid #dddddd;
+  //   text-align: left;
+  //   padding: 8px;
+  // }
+  
+  // tr:nth-child(even) {
+  //   background-color: #dddddd;
+  // }
   // border-right: none !important;
   // .back-but{
   //   button{
