sidemenu, addread and add bulk styles added

--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -10,7 +10,7 @@
       </button>
 
       <mat-expansion-panel [class.mat-elevation-z0]="true" *ngIf="loginuser.role ==='OrganizationAdmin'">
-        <mat-expansion-panel-header>
+        <mat-expansion-panel-header class="mdc-button">
           Device
         </mat-expansion-panel-header>
         <mat-nav-list>
