--- a/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
@@ -37,8 +37,12 @@
                     Upload
                   </button>
                 </mat-toolbar>
+                <div class="d-flex justify-content-center">
+                  <input type="file" id="fileInput" (change)="selectFile($event)" name="fileInput" />
 
-                <input type="file" id="fileInput" (change)="selectFile($event)" name="fileInput" />
+                </div>
+
+                
               </div>
             </mat-form-field>
           </div>
