--- a/apps/drec-angular-ui/src/app/view/addread/addread.component.html
+++ b/apps/drec-angular-ui/src/app/view/addread/addread.component.html
@@ -124,7 +124,7 @@
             </mat-card-content>
 
             <mat-card-footer>
-                <div class="example-container row">
+                <div class="example-container mb-3 me-3 row">
                     <div class="col-12 d-flex justify-content-end">
                         <button type="submit" [disabled]="readForm.invalid"class="btn-primary btn text-capitalize px-4">submit</button>
                     </div>
