--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
@@ -54,6 +54,9 @@ $secondary: #010101;
   .card-rad{
     border-radius: 0px;
   }
+  .table-data-myreservation{
+    font-size: 12px;
+  }
   // table {
   //   font-family: arial, sans-serif;
   //   border-collapse: collapse;
