--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -27,14 +27,14 @@
 
                 <!-- Progress Column -->
                 <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Name </th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.name}} </td>
                 </ng-container>
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="aggregatedCapacity">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Aggregate Capacity</th>
-                    <td mat-cell *matCellDef="let row"> {{row.aggregatedCapacity}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Aggregate Capacity</th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.aggregatedCapacity}} </td>
                 </ng-container>
 
                 <!-- Fruit Column -->
@@ -50,35 +50,35 @@
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="frequency">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Issuance Frequency </th>
-                    <td mat-cell *matCellDef="let row"> {{row.frequency}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate">Issuance Frequency </th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.frequency}} </td>
                 </ng-container>
 
                 <!-- Fruit Column -->
                 <ng-container matColumnDef="reservationStartDate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Start </th>
-                    <td mat-cell *matCellDef="let row"> {{row.reservationStartDate| date:'EEE d MMM y'}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Start </th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.reservationStartDate| date:'EEE d MMM y'}} </td>
                 </ng-container>
                 <!-- Fruit Column -->
                 <ng-container matColumnDef="reservationEndDate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> End </th>
-                    <td mat-cell *matCellDef="let row"> {{row.reservationEndDate| date:'EEE d MMM y'}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> End </th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.reservationEndDate| date:'EEE d MMM y'}} </td>
                 </ng-container>
                 <ng-container matColumnDef="targetVolumeInMegaWattHour">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Target </th>
-                    <td mat-cell *matCellDef="let row"> {{row.targetVolumeInMegaWattHour}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Target </th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.targetVolumeInMegaWattHour}} </td>
                 </ng-container>
                 <!-- <ng-container matColumnDef="fuelCode">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> FuelCode </th>
                         <td mat-cell *matCellDef="let row"> {{row.fuelCode}} </td>
                     </ng-container> -->
                 <ng-container matColumnDef="number Of Devices">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Number Of Devices </th>
-                    <td mat-cell *matCellDef="let row"> {{row.numberOfdevices}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Number Of Devices </th>
+                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.numberOfdevices}} </td>
                 </ng-container>
                 <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef>Action</th>
-                    <td mat-cell *matCellDef="let row; let i=index;">
+                    <th mat-header-cell *matHeaderCellDef class="text-truncate">Action</th>
+                    <td mat-cell *matCellDef="let row; let i=index;" class="table-data-myreservation">
                         <tr class="d-flex">
                             <!-- <a class="btn-primary d-flex me-2 align-items-center btn-pad btn btn-sm"
                                 [routerLink]="['/certificate']" [queryParams]="{id: row.devicegroup_uid,name:row.name}"
