device view change,add friendly name device and meter form validate

--- a/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
+++ b/apps/drec-angular-ui/src/app/view/redemption-report/redemption-report.component.html
@@ -58,24 +58,24 @@
               <td mat-cell *matCellDef="let element"> {{element.capacityRange}} </td>
             </ng-container>
   
-            <ng-container matColumnDef="installations">
+            <!-- <ng-container matColumnDef="installations">
               <th mat-header-cell *matHeaderCellDef> installations </th>
               <td mat-cell *matCellDef="let element"> {{element.installations}} </td>
             </ng-container>
-           
+            -->
             <ng-container matColumnDef="offTakers">
               <th mat-header-cell *matHeaderCellDef> offTakers </th>
               <td mat-cell *matCellDef="let element"> {{element.offTakers}} </td>
             </ng-container>
             
-              <ng-container matColumnDef="sectors">
+              <!-- <ng-container matColumnDef="sectors">
                 <th mat-header-cell *matHeaderCellDef> sectors </th>
                 <td mat-cell *matCellDef="let element"> {{element.sectors}} </td>
               </ng-container>  
             <ng-container matColumnDef="standardCompliance">
               <th mat-header-cell *matHeaderCellDef> standardCompliance </th>
               <td mat-cell *matCellDef="let element"> {{element.standardCompliance}} </td>
-            </ng-container>
+            </ng-container> -->
             <ng-container matColumnDef="purpose">
               <th mat-header-cell *matHeaderCellDef> purpose </th>
               <td mat-cell *matCellDef="let element"> {{element.purpose}} </td>
