--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -44,8 +44,13 @@
       <button mat-button class="menu-button" routerLinkActive="active" routerLink="/myreservation"
         *ngIf="loginuser.role ==='Buyer'">
         <mat-icon>list</mat-icon>
-        <span>My Reservation</span>
+        <span>My Reservations</span>
       </button>
+      <button mat-button class="menu-button" routerLinkActive="active" routerLink="/myreservation"
+      *ngIf="loginuser.role ==='Buyer'">
+      <mat-icon>list</mat-icon>
+      <span>Certificate</span>
+    </button>
       <button mat-button class="menu-button text-start" routerLinkActive="active" routerLink="/redemption-report"
         *ngIf="loginuser.role ==='Buyer'">
         <mat-icon>list</mat-icon>
