--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -105,7 +105,7 @@
                                         <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">capacity</mat-label>
                                             <input matInput placeholder="capacity" type="number"
-                                                formControlName='capacity'>
+                                                formControlName='capacity' [min]=0>
                                             <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                             <!-- <mat-hint>Hint</mat-hint> -->
                                         </mat-form-field>
