--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -53,8 +53,8 @@
 
           <!-- Name Column -->
           <ng-container matColumnDef="countryCode">
-            <th mat-header-cell *matHeaderCellDef> CountryCode </th>
-            <td mat-cell *matCellDef="let element"> {{element.countryCode}} </td>
+            <th mat-header-cell *matHeaderCellDef> Country </th>
+            <td mat-cell *matCellDef="let element"> {{element.countryname}} </td>
           </ng-container>
 
           <!-- Weight Column -->
@@ -66,7 +66,7 @@
           <!-- Symbol Column -->
           <ng-container matColumnDef="fuelCode">
             <th mat-header-cell *matHeaderCellDef> FuelCode </th>
-            <td mat-cell *matCellDef="let element"> {{element.fuelCode}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.fuelname}} </td>
           </ng-container>
           <!-- Status Column -->
           <ng-container matColumnDef="status">
