--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -146,8 +146,8 @@
                     <td mat-cell *matCellDef="let row"> {{row.projectName}} </td>
                 </ng-container>
                 <ng-container matColumnDef="countryCode">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> country</th>
-                    <td mat-cell *matCellDef="let row"> {{row.countryCode}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Country</th>
+                    <td mat-cell *matCellDef="let row"> {{row.countryname}} </td>
                 </ng-container>
 
                 <ng-container matColumnDef="capacity">
@@ -162,20 +162,24 @@
                 </ng-container>
                 <!-- Fruit Column -->
                 <ng-container matColumnDef="commissioningDate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> commissioningDate </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Commissioning Date </th>
                     <td mat-cell *matCellDef="let row"> {{row.commissioningDate| date:'EEE d MMM y'}} </td>
                 </ng-container>
                 <ng-container matColumnDef="offTaker">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> offTaker </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> OffTaker </th>
                     <td mat-cell *matCellDef="let row"> {{row.offTaker}} </td>
                 </ng-container>
                 <ng-container matColumnDef="fuelCode">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> FuelCode </th>
-                        <td mat-cell *matCellDef="let row"> {{row.fuelCode}} </td>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuel Code </th>
+                        <td mat-cell *matCellDef="let row"> {{row.fuelname}} </td>
                     </ng-container>
                 <ng-container matColumnDef="deviceTypeCode">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> deviceTypeCode </th>
-                    <td mat-cell *matCellDef="let row"> {{row.deviceTypeCode}} </td>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Device Code </th>
+                    <td mat-cell *matCellDef="let row"> {{row.devicetypename}} </td>
+                </ng-container>
+                <ng-container matColumnDef="SDGBenefits">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> SDGBenefits </th>
+                    <td mat-cell *matCellDef="let row"> {{row.SDGBenefits}} </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns1;"></tr>
